Fix mobile header layout

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -139,7 +139,7 @@
   }
 
   .nav-container {
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: var(--space-4);
   }
 
@@ -154,11 +154,10 @@
   }
 
   .season-select {
-    width: 100%;
+    width: auto;
     display: flex;
-    justify-content: center;
-    margin: var(--space-2) 0 0;
-    margin-left: 0 !important;
+    justify-content: flex-end;
+    margin: 0 0 0 auto;
   }
 }
 
