--- a/css/layouts/footer.css
+++ b/css/layouts/footer.css
@@ -215,3 +215,18 @@
   color: #E4405F;
 }
 /* WINDSURF_END FooterIconsStyle */
+
+@media (max-width: 767px) {
+  .footer-section {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .footer-section .social-links {
+    justify-content: center;
+  }
+
+  .footer-section-title {
+    text-align: center;
+  }
+}
