--- a/styles.css
+++ b/styles.css
@@ -651,7 +651,7 @@ a:focus {
     text-align: center;
   }
 
-  .season-select {
+  .nav-menu .season-select {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -659,7 +659,7 @@ a:focus {
   }
 }
 
-.season-select {
+.nav-menu .season-select {
   margin-left: var(--space-4);
 }
 
