--- a/styles.css
+++ b/styles.css
@@ -435,7 +435,7 @@ a:focus {
   top: 0;
   left: 0;
   right: 0;
-  background-image: url('./img/和紙_黒_optimized.png');
+  background-image: url('./img/和紙_黒_optimized.webp');
   background-size: cover;
   background-repeat: repeat;
   backdrop-filter: blur(10px);
@@ -1346,7 +1346,7 @@ SURF_END SeasonTextColor */
 
 /* ===== Footer ===== */
 .footer {
-  background-image: url('./img/和紙_黒_optimized.png');
+  background-image: url('./img/和紙_黒_optimized.webp');
   background-size: cover;
   background-repeat: repeat;
   color: var(--neutral-300);
@@ -3519,7 +3519,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    background-image: url('./img/和紙_黒_optimized.png');
+    background-image: url('./img/和紙_黒_optimized.webp');
     background-size: cover;
     background-repeat: repeat;
     backdrop-filter: blur(10px);
@@ -3665,7 +3665,7 @@ body:not(.loaded) * {
 
 /* ===== Pro Washi Footer 2025 ===== */
 .footer {
-    background-image: url('./img/和紙_黒_optimized.png');
+    background-image: url('./img/和紙_黒_optimized.webp');
     background-size: cover;
     background-repeat: repeat;
     border-top: 3px double rgba(0,0,0,0.12);
